# ytdl

./: Dockerfile  Makefile  main.py  package.json  pyproject.toml  requirements.txt  scraper.py  webpack.config.js
frontend/: Action.js  AppRouter.jsx  Home.jsx  NotFoundPage.jsx  Search.jsx  SearchBar.jsx  SearchPage.jsx  index.jsx
public/: index.html
public/css/: 404.css  style.css
public/js/: main.js  search.js
templates/: download.html  index.html  search.html
